<resources>
    <string name="app_name">Sleep cycle</string>
    <string name="btnWakeUp">When should I wake up?</string>
    <string name="btnGoToBed">When should I go to bed?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="hour">Hour</string>
    <string name="when_should_i_go_to_bed">When should I go to bed?</string>
    <string name="when_should_i_wake_up">When should I wake up?</string>
    <string name="delete_all">delete all</string>
    <string name="textview">TextView</string>
    <string name="plus">+</string>
    <string name="edit">Edit</string>
</resources>
